Fix iOS compatibility and add light mode - Fixed iOS touch events with proper tap handling - Updated AudioAnalyzer for iOS Safari compatibility - Added touch-action manipulation for better button response - Added light mode theme toggle in settings - Increased button tap targets for mobile - Updated service worker cache version

--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
                     </div>
                 </div>
                 
+                <div class="settings-group">
+                    <label class="settings-label">Light Mode</label>
+                    <div class="toggle-container">
+                        <input type="checkbox" id="themeToggle" class="toggle">
+                        <label for="themeToggle" class="toggle-label"></label>
+                    </div>
+                </div>
+                
                 <div class="settings-footer">
                     <p class="settings-info">
                         Resonance Body Map v1.0<br>
