Add musical note detection to frequency display - Convert Hz to nearest musical note (C1-C7 range) - Display note name above Hz value (e.g., A4, C#3, F#5) - A4 = 440 Hz reference with semitone calculation - Note inherits same color glow as Hz display - Larger font for note (primary info), smaller for Hz - Fades in/out with frequency detection - Uses sharps notation (F# not Gb) - Responsive sizing for mobile

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         
         <!-- Frequency Display -->
         <div class="frequency-display" id="frequencyDisplay">
+            <div class="freq-note" id="freqNote"></div>
             <div class="freq-value" id="freqValue">
                 <span class="freq-number">---</span>
                 <span class="freq-unit">Hz</span>
