--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@
                 </div>
                 
                 <div class="settings-footer">
+                    <button class="btn" id="instrumentGuideBtn" style="width:100%;margin-bottom:var(--space-md)">
+                        <span class="btn-text">Instrument Guide</span>
+                    </button>
                     <p class="settings-info">
                         Resonance Body Map v1.0.1<br>
                         <span class="settings-note">An artistic visualization based on traditional energy systems</span>
