feat: audio file input, frequency-to-note interval learning
- Add AudioFileInput module for MP3/WAV playback visualization
- Add initFromAudioElement to AudioAnalyzer for file-based analysis
- Wire audio file button in settings panel
- Enhance FrequencyDisplay to show musical interval from root (C2)
- Shows interval names: Unison, Perfect 5th, Major 3rd, etc.
- Bump cache to v1.3.0

--- a/index.html
+++ b/index.html
@@ -240,6 +240,9 @@
                     <button class="btn" id="instrumentGuideBtn" style="width:100%;margin-bottom:var(--space-md)">
                         <span class="btn-text">Instrument Guide</span>
                     </button>
+                    <button class="btn" id="audioFileBtn" style="width:100%;margin-bottom:var(--space-md)">
+                        <span class="btn-text">Play Audio File</span>
+                    </button>
                     <p class="settings-info">
                         Resonance Body Map v1.0.1<br>
                         <span class="settings-note">An artistic visualization based on traditional energy systems</span>
