--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <span class="freq-unit">Hz</span>
             </div>
             <div class="freq-region" id="freqRegion"></div>
+            <div class="freq-active-label" id="freqActiveLabel" aria-live="polite"></div>
         </div>
         
         <!-- Controls -->
