Decouple session recording from start, add record button, redesign session summary with natural chakra order and colors

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <button class="btn btn-primary" id="mainBtn" aria-label="Begin Listening">
                 <span class="btn-text">Begin Listening</span>
             </button>
+            <button class="btn btn-icon btn-record hidden" id="recordBtn" aria-label="Record session">
+                <span class="record-dot"></span>
+            </button>
             <button class="btn btn-icon" id="settingsBtn" aria-label="Settings">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                     <circle cx="12" cy="12" r="3"/>
