Fix controls pushed off-screen: reduce body max-height, compact layout on mobile; default cymatics to Follow Region

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                 <div class="settings-group">
                     <label class="settings-label">Cymatics Position</label>
                     <div class="cymatics-position-toggle">
-                        <button id="cymatics-center" class="active">Center</button>
-                        <button id="cymatics-region">Follow Region</button>
+                        <button id="cymatics-center">Center</button>
+                        <button id="cymatics-region" class="active">Follow Region</button>
                     </div>
                 </div>
                 
